[gd_scene load_steps=10 format=3 uid="uid://cm1btb8ud576w"]

[ext_resource type="Script" uid="uid://cb5bdlq2dsarq" path="res://scenes/game/settings_menu/settings.gd" id="1_mj67b"]
[ext_resource type="LabelSettings" uid="uid://bbmhkpo6cvr0d" path="res://shared/fonts/paragraph_label.tres" id="2_ejy06"]
[ext_resource type="Texture2D" uid="uid://karg46wlpnyn" path="res://scenes/game/lose_screen/btn_0.png" id="3_armla"]
[ext_resource type="Texture2D" uid="uid://41efs6tdxvhh" path="res://scenes/game/lose_screen/btn_1.png" id="4_khcj0"]
[ext_resource type="FontFile" uid="uid://dyp0j5gh3j3r" path="res://shared/fonts/DeliusUnicase-Regular.ttf" id="5_pk6ob"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ym4uu"]
texture = ExtResource("3_armla")
texture_margin_left = 24.0
texture_margin_top = 29.0
texture_margin_right = 24.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qbabx"]
texture = ExtResource("4_khcj0")
texture_margin_left = 24.0
texture_margin_top = 29.0
texture_margin_right = 24.0

[sub_resource type="Theme" id="Theme_jb7qn"]
Button/styles/focus = SubResource("StyleBoxTexture_ym4uu")
Button/styles/hover = SubResource("StyleBoxTexture_qbabx")
Button/styles/normal = SubResource("StyleBoxTexture_ym4uu")
Button/styles/pressed = SubResource("StyleBoxTexture_qbabx")

[sub_resource type="LabelSettings" id="LabelSettings_47e23"]
font = ExtResource("5_pk6ob")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="Settings" type="VBoxContainer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -80.0
offset_right = 196.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_mj67b")

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="MusicSlider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = -50.0
offset_right = 55.5
offset_bottom = -10.0
grow_horizontal = 2
text = "Music"
label_settings = ExtResource("2_ejy06")

[node name="SoundSlider" type="HSlider" parent="."]
layout_mode = 2
size_flags_vertical = 2
max_value = 1.0
step = 0.05

[node name="Label" type="Label" parent="SoundSlider"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.5
offset_top = -50.0
offset_right = 55.5
offset_bottom = -10.0
grow_horizontal = 2
text = "Sound"
label_settings = ExtResource("2_ejy06")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_jb7qn")

[node name="Label" type="Label" parent="Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -15.5
offset_right = 20.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "OK"
label_settings = SubResource("LabelSettings_47e23")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="MusicSlider" to="." method="set_music_volume"]
[connection signal="value_changed" from="SoundSlider" to="." method="set_sound_volume"]
[connection signal="pressed" from="Button" to="." method="set_visible" binds= [false]]
